--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs40-admin-dashboard-start",
+  "name": "admin-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
